--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div class="main">
+        <h1>Logo</h1>
+        <h2>Some text</h2>
         <div class="available-lists"></div>
         <div class="current-list-container"></div>
     </div>
